--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<h2>Welcome! I am Shivam
 							<br>
 							Helping Drive Data Driven Decisions</h2>
-							<p>Scroll down to find Projects of your interest, divided under the broad categories<br />
+							<p>Scroll down to find Projects of your interest, divided under the broad categories<br /><br />
 								Advanced Excel &nbsp;|&nbsp; SQL &nbsp;|&nbsp; Python &nbsp;|&nbsp; Tableau &nbsp;|&nbsp; Power BI <br />
 								Machine Learning
 								
