--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 									<li>
 										<a href="#project1">Projects</a>
 										<ul>
-											<li><a href="Project/excel.html">Excel</a></li>
+											<li><a href="https://github.com/ShivamTyagiOfficial/ShivamTyagiOfficial.Github.IO/blob/master/Project/excel.html">Excel</a></li>
 											<li><a href="Project/sql.html">SQL</a></li>
 											<li><a href="Project/python.html">Python</a></li>
 											<li><a href="Project/powerbi.html">Power BI</a></li>
