--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 									<li>
 										<a href="#project1">Projects</a>
 										<ul>
-											<li><a href="https://github.com/ShivamTyagiOfficial/ShivamTyagiOfficial.Github.IO/blob/master/Project/excel.html">Excel</a></li>
+											<li><a href="Project/excel.html">Excel</a></li>
 											<li><a href="Project/sql.html">SQL</a></li>
 											<li><a href="Project/python.html">Python</a></li>
 											<li><a href="Project/powerbi.html">Power BI</a></li>
@@ -95,7 +95,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special" id="project1">
-								<span class="image featured"><a href="Website\Project\excel.html"><img src="images/excel_image.png" alt="" /></a></span>
+								<span class="image featured"><a href="Project\excel.html"><img src="images/excel_image.png" alt="" /></a></span>
 								<h2><b><i>Advanced Excel</i></b></h2>
 								<ul class="actions special">
 								</ul>
@@ -106,7 +106,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="Website\Project\sql.html"><img src="images/sql_image.png" alt="" /></a></span>
+								<span class="image featured"><a href="Project\sql.html"><img src="images/sql_image.png" alt="" /></a></span>
 								<h2><b><i>SQL</i></b></h2>
 								<ul class="actions special">
 								</ul>
@@ -117,7 +117,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="Website\Project\python.html"><img src="images/py_image.png" alt="" /></a></span>
+								<span class="image featured"><a href="Project\python.html"><img src="images/py_image.png" alt="" /></a></span>
 								<h2><b><i>Python</i></b></h2>
 								<ul class="actions special">
 								</ul>
@@ -128,7 +128,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="Website\Project\tableau.html"><img src="images/tableau_image.png" alt="" /></a></span>
+								<span class="image featured"><a href="Project\tableau.html"><img src="images/tableau_image.png" alt="" /></a></span>
 								<h2><b><i>Tableau</i></b></h2>
 								<ul class="actions special">
 								</ul>
@@ -139,7 +139,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="Website\Project\powerbi.html"><img src="images/powerbi_image.png" alt="" /></a></span>
+								<span class="image featured"><a href="Project\powerbi.html"><img src="images/powerbi_image.png" alt="" /></a></span>
 								<h2><b><i>Power BI</i></b></h2>
 								<ul class="actions special">
 								</ul>
@@ -150,7 +150,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="Website\Project\ml.html"><img src="images/ml_image.png" alt="" /></a></span>
+								<span class="image featured"><a href="Project\ml.html"><img src="images/ml_image.png" alt="" /></a></span>
 								<h2><b><i>Machine Learning</i></b></h2>
 								<ul class="actions special">
 								</ul>
