--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Alpha by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Shivam Tyagi</title>
@@ -95,7 +90,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special" id="project1">
-								<span class="image featured"><a href="Project\excel.html"><img src="images/excel_image.png" alt="" /></a></span>
+								<span class="image featured"><a href="Project/excel.html"><img src="images/excel_image.png" alt="" /></a></span>
 								<h2><b><i>Advanced Excel</i></b></h2>
 								<ul class="actions special">
 								</ul>
@@ -106,7 +101,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="Project\sql.html"><img src="images/sql_image.png" alt="" /></a></span>
+								<span class="image featured"><a href="Project/sql.html"><img src="images/sql_image.png" alt="" /></a></span>
 								<h2><b><i>SQL</i></b></h2>
 								<ul class="actions special">
 								</ul>
@@ -117,7 +112,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="Project\python.html"><img src="images/py_image.png" alt="" /></a></span>
+								<span class="image featured"><a href="Project/python.html"><img src="images/py_image.png" alt="" /></a></span>
 								<h2><b><i>Python</i></b></h2>
 								<ul class="actions special">
 								</ul>
@@ -128,7 +123,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="Project\tableau.html"><img src="images/tableau_image.png" alt="" /></a></span>
+								<span class="image featured"><a href="Project/tableau.html"><img src="images/tableau_image.png" alt="" /></a></span>
 								<h2><b><i>Tableau</i></b></h2>
 								<ul class="actions special">
 								</ul>
@@ -139,7 +134,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="Project\powerbi.html"><img src="images/powerbi_image.png" alt="" /></a></span>
+								<span class="image featured"><a href="Project/powerbi.html"><img src="images/powerbi_image.png" alt="" /></a></span>
 								<h2><b><i>Power BI</i></b></h2>
 								<ul class="actions special">
 								</ul>
@@ -150,7 +145,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="Project\ml.html"><img src="images/ml_image.png" alt="" /></a></span>
+								<span class="image featured"><a href="Project/ml.html"><img src="images/ml_image.png" alt="" /></a></span>
 								<h2><b><i>Machine Learning</i></b></h2>
 								<ul class="actions special">
 								</ul>
