--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<p>Data Driven & Tech Savvy </p>
 					<ul class="actions special">
 						<li><a href="#" class="button primary">Certifications</a></li>
-						<li><a href="tel:6377423980p91" class="button">Contact Us</a></li>
+						<li><a href="tel:6377423980" class="button">Contact Us</a></li>
 					</ul>
 				</section>
 
