--- a/Project/sql.html
+++ b/Project/sql.html
@@ -29,12 +29,12 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="Website\index.html">Home</a></li>
-							<li><a href="Website\excel.html">Excel</a></li>
-							<li><a href="Website\sql.html">SQL</a></li>
-							<li><a href="Website\python.html">Python</a></li>
-							<li><a href="Website\tableau.html">Tableau</a></li>
-							<li><a href="Website\powerbi.html">Power BI</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="excel.html">Excel</a></li>
+							<li><a href="sql.html">SQL</a></li>
+							<li><a href="python.html">Python</a></li>
+							<li><a href="tableau.html">Tableau</a></li>
+							<li><a href="powerbi.html">Power BI</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="Website\contact.html" class="button primary fit">What Do You Think</a></li>
@@ -70,7 +70,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://www.mycompiler.io/view/2FsXDB3Z9Tj" class="link">Basic SQL</a></h3>
+										<h3><a href="https://github.com/ShivamTyagiOfficial/SQL-Codes/blob/main/SQL_Operators.md" class="link">Basic SQL</a></h3>
 										<p>A SQL operator is a reserved word / character that is used to perform certain tasks 
 											such as comparisons, arithmetics, etc.
 										</p>
