--- a/Project/sql.html
+++ b/Project/sql.html
@@ -70,7 +70,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/ShivamTyagiOfficial/SQL-Codes/blob/main/SQL_Operators.md" class="link">Basic SQL</a></h3>
+										<h3><a href="https://github.com/ShivamTyagiOfficial/SQL-Codes/blob/main/SQL_Operators.md" class="link">SQL Operators</a></h3>
 										<p>A SQL operator is a reserved word / character that is used to perform certain tasks 
 											such as comparisons, arithmetics, etc.
 										</p>
