--- a/Project/sql.html
+++ b/Project/sql.html
@@ -92,7 +92,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">SQL Joins</a></h3>
+										<h3><a href="https://github.com/ShivamTyagiOfficial/SQL-Codes/blob/main/JOIN_Queries.md" class="link">SQL Joins</a></h3>
 										<p>A join clause in SQL is meant to combine columns from one or more tables into a new table.
 											It is used to combine data or rows from two or more tables based on a common field between them.
 										</p>
