--- a/Project/excel.html
+++ b/Project/excel.html
@@ -28,17 +28,14 @@
 
 				<!-- Menu -->
 					<nav id="menu">
+						
 						<ul class="links">
-							<li><a href="Website\index.html">Home</a></li>
-							<li><a href="Website\excel.html">Excel</a></li>
-							<li><a href="Website\sql.html">SQL</a></li>
-							<li><a href="Website\python.html">Python</a></li>
-							<li><a href="Website\tableau.html">Tableau</a></li>
-							<li><a href="Website\powerbi.html">Power BI</a></li>
+
 						</ul>
+						
 						<ul class="actions stacked">
-							<li><a href="Website\contact.html" class="button primary fit">What Do You Think</a></li>
-							<li><a href="tel:6377423980p91" class="button fit">Contact Us</a></li>
+							<li><a href="contact.html" class="button primary fit">What Do You Think</a></li>
+							<li><a href="tel:637-742-3980" class="button fit">Contact Us</a></li>
 						</ul>
 					</nav>
 
