--- a/Project/excel.html
+++ b/Project/excel.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 	<head>
@@ -142,7 +137,7 @@
 										Above you'll find how I have utilized Excel to perform Data Analysis and make sense 
 										out of mundane data.</p>
 									<ul class="actions">
-										<li><a href="Website\contact.html" class="button next">Get In Touch</a></li>
+										<li><a href="contact.html" class="button next">Get In Touch</a></li>
 									</ul>
 								</div>
 							</section>
