--- a/Project/excel.html
+++ b/Project/excel.html
@@ -29,7 +29,7 @@
 						</ul>
 						
 						<ul class="actions stacked">
-							<li><a href="contact.html" class="button primary fit">What Do You Think</a></li>
+							<li><a href="Extra/contact.html" class="button primary fit">What Do You Think</a></li>
 							<li><a href="tel:637-742-3980" class="button fit">Contact Us</a></li>
 						</ul>
 					</nav>
@@ -137,7 +137,7 @@
 										Above you'll find how I have utilized Excel to perform Data Analysis and make sense 
 										out of mundane data.</p>
 									<ul class="actions">
-										<li><a href="contact.html" class="button next">Get In Touch</a></li>
+										<li><a href="Extra/contact.html" class="button next">Get In Touch</a></li>
 									</ul>
 								</div>
 							</section>
