--- a/Project/sql.html
+++ b/Project/sql.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 	<head>
@@ -81,7 +76,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">SQL Index</a></h3>
+										<h3><a href="https://github.com/ShivamTyagiOfficial/SQL-Codes/blob/main/SQL_WindowFunctions.md" class="link">SQL Window Functions</a></h3>
 										<p>A SQL index is a quick lookup table for finding records that users need frequently. 
 											It is small, fast, and optimized for quick lookups. 
 										</p>
