--- a/Project/excel.html
+++ b/Project/excel.html
@@ -62,11 +62,11 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://1drv.ms/x/s!AtYtW2RAvl6AoDN3FhsNvUGk0VFa" class="link">Charts</a></h3>
-										<p>I approached the data as a market analyst at Amazon. I was interested in finding out the trends in 
-										Mobile Sales across years and brands. I was also interested in analyzing the available 
-										data to generate insights into where the market is headed. Having proposed the plan to 
-										the management, I gathered the data and created a dashboard to visualize my findings.
+										<h3><a href="https://1drv.ms/x/s!AtYtW2RAvl6AoDN3FhsNvUGk0VFa" class="link">Super Market Data Analysis</a></h3>
+										<p>I approached the data as the Head Manager of the company, 
+											I am interested in certain metrics to help shape the future of the store in the years to come.
+											Having conversed with all three branch managers, below are the various objectives we had drawn out 
+											as the chief objectives to be worked up on.
 										</p>
 									</header>
 								</article>
@@ -76,7 +76,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://1drv.ms/x/s!AtYtW2RAvl6AoDG8-1YVxBK8bP4C" class="link">Charts</a></h3>
+										<h3><a href="https://1drv.ms/x/s!AtYtW2RAvl6AoDG8-1YVxBK8bP4C" class="link">Amazon Sales Analysis</a></h3>
 										<p>I approached the data as a market analyst at Amazon. I was interested in finding out the trends in 
 										Mobile Sales across years and brands. I was also interested in analyzing the available 
 										data to generate insights into where the market is headed. Having proposed the plan to 
