--- a/Project/excel.html
+++ b/Project/excel.html
@@ -63,8 +63,8 @@
 									</span>
 									<header class="major">
 										<h3><a href="https://1drv.ms/x/s!AtYtW2RAvl6AoDN3FhsNvUGk0VFa" class="link">Super Market Data Analysis</a></h3>
-										<p>I approached the data as the Head Manager of the company, 
-											I am interested in certain metrics to help shape the future of the store in the years to come.
+										<p>I approached the data as the Manager of the company, 
+											I am interested in metrics to help shape the future of the store in the years to come.
 											Having conversed with all three branch managers, below are the various objectives we had drawn out 
 											as the chief objectives to be worked up on.
 										</p>
